// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListViewSkeleton /> matches snapshot inside ListView with columns from context 1`] = `
.c0.c0.c0.c0.c0 {
  overflow: hidden;
  background-color: hsla(0,0%,100%,1);
  border-radius: 12px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  height: 16px;
  width: 80%;
  border-radius: 12px;
}

.c6.c6.c6.c6.c6 {
  height: 16px;
  width: 60%;
  border-radius: 12px;
}

.c8.c8.c8.c8.c8 {
  height: 14px;
  width: 70%;
  border-radius: 12px;
}

.c9.c9.c9.c9.c9 {
  height: 14px;
  width: 75%;
  border-radius: 12px;
}

.c10.c10.c10.c10.c10 {
  height: 14px;
  width: 50%;
  border-radius: 12px;
}

.c5.c5.c5.c5.c5 {
  opacity: 0;
  background-color: hsla(206,10%,29%,0.06);
  -webkit-animation-name: lbWRkT-450290765,cxENvt-450290765;
  animation-name: lbWRkT-450290765,cxENvt-450290765;
  -webkit-animation-duration: 960ms,1320ms;
  animation-duration: 960ms,1320ms;
  -webkit-animation-delay: 0ms,960ms;
  animation-delay: 0ms,960ms;
  -webkit-animation-timing-function: cubic-bezier(0.3,0,0.2,1),cubic-bezier(0.3,0,0.2,1);
  animation-timing-function: cubic-bezier(0.3,0,0.2,1),cubic-bezier(0.3,0,0.2,1);
  -webkit-animation-iteration-count: 1,infinite;
  animation-iteration-count: 1,infinite;
  -webkit-animation-direction: normal,alternate;
  animation-direction: normal,alternate;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

.c3.c3.c3.c3.c3 {
  display: grid;
  grid-template-columns: repeat(3,minmax(100px,1fr));
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border-bottom-width: 1px;
  border-bottom-color: hsla(206,10%,29%,0.12);
  border-bottom-style: solid;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7.c7.c7.c7.c7 {
  display: grid;
  grid-template-columns: repeat(3,minmax(100px,1fr));
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  border-bottom-width: 1px;
  border-bottom-color: hsla(206,10%,29%,0.12);
  border-bottom-style: solid;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1.c1.c1.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  box-shadow: 0px 6px 32px 4px hsla(205,8%,71%,0.06),inset 0px -1.5px 0px 1px hsla(0,0%,100%,1);
  border: none;
  border-top: 1px solid hsla(204,8%,88%,1);
  background-image: linear-gradient(to bottom,hsla(0,0%,100%,1) 0%,hsla(0,0%,100%,1) 100%), linear-gradient(to bottom,hsla(0,0%,100%,1) 0%,hsla(0,0%,97%,1) 100%);
  background-position: center top, center calc(100% - 2px);
  background-size: calc(100% - 2px) 16px, calc(100% - 2px) 16px;
  background-repeat: no-repeat;
  border-left: 1px solid hsla(204,8%,88%,1);
  border-right: 1px solid hsla(204,8%,88%,1);
  border-bottom: 1px solid hsla(204,8%,88%,1);
}

<div>
  <div
    class="c0 c1"
    data-blade-component="list-view"
  >
    <div
      class="c2"
      data-blade-component="box"
      data-testid="list-view-skeleton"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
        data-testid="list-view-skeleton-header"
      >
        <div
          aria-hidden="true"
          class="c4 c5"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c6 c5"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c6 c5"
          data-blade-component="skeleton"
        />
      </div>
      <div
        class=""
        data-blade-component="box"
        data-testid="list-view-skeleton-rows"
      >
        <div
          class=" c7"
          data-blade-component="base-box"
          data-testid="list-view-skeleton-row-0"
        >
          <div
            aria-hidden="true"
            class="c8 c5"
            data-blade-component="skeleton"
          />
          <div
            aria-hidden="true"
            class="c9 c5"
            data-blade-component="skeleton"
          />
          <div
            aria-hidden="true"
            class="c10 c5"
            data-blade-component="skeleton"
          />
        </div>
        <div
          class=" c7"
          data-blade-component="base-box"
          data-testid="list-view-skeleton-row-1"
        >
          <div
            aria-hidden="true"
            class="c8 c5"
            data-blade-component="skeleton"
          />
          <div
            aria-hidden="true"
            class="c9 c5"
            data-blade-component="skeleton"
          />
          <div
            aria-hidden="true"
            class="c10 c5"
            data-blade-component="skeleton"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ListViewSkeleton /> matches snapshot with default props 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-right: 16px;
  padding-left: 16px;
  gap: 12px;
  border-bottom-width: 1px;
  border-bottom-color: hsla(206,10%,29%,0.12);
  border-bottom-style: solid;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c3.c3.c3.c3.c3 {
  height: 32px;
  width: 80px;
  border-radius: 9999px;
}

.c5.c5.c5.c5.c5 {
  height: 32px;
  width: 64px;
  border-radius: 9999px;
}

.c6.c6.c6.c6.c6 {
  height: 32px;
  width: 72px;
  border-radius: 9999px;
}

.c7.c7.c7.c7.c7 {
  height: 32px;
  width: 70px;
  border-radius: 9999px;
}

.c8.c8.c8.c8.c8 {
  height: 36px;
  width: 200px;
  border-radius: 12px;
}

.c10.c10.c10.c10.c10 {
  height: 16px;
  width: 80%;
  border-radius: 12px;
}

.c11.c11.c11.c11.c11 {
  height: 16px;
  width: 60%;
  border-radius: 12px;
}

.c13.c13.c13.c13.c13 {
  height: 14px;
  width: 70%;
  border-radius: 12px;
}

.c14.c14.c14.c14.c14 {
  height: 14px;
  width: 75%;
  border-radius: 12px;
}

.c15.c15.c15.c15.c15 {
  height: 14px;
  width: 50%;
  border-radius: 12px;
}

.c16.c16.c16.c16.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-right: 16px;
  padding-left: 16px;
  gap: 8px;
}

.c17.c17.c17.c17.c17 {
  height: 32px;
  width: 80px;
  border-radius: 12px;
}

.c18.c18.c18.c18.c18 {
  height: 32px;
  width: 120px;
  border-radius: 12px;
}

.c4.c4.c4.c4.c4 {
  opacity: 0;
  background-color: hsla(206,10%,29%,0.06);
  -webkit-animation-name: lbWRkT-450290765,cxENvt-450290765;
  animation-name: lbWRkT-450290765,cxENvt-450290765;
  -webkit-animation-duration: 960ms,1320ms;
  animation-duration: 960ms,1320ms;
  -webkit-animation-delay: 0ms,960ms;
  animation-delay: 0ms,960ms;
  -webkit-animation-timing-function: cubic-bezier(0.3,0,0.2,1),cubic-bezier(0.3,0,0.2,1);
  animation-timing-function: cubic-bezier(0.3,0,0.2,1),cubic-bezier(0.3,0,0.2,1);
  -webkit-animation-iteration-count: 1,infinite;
  animation-iteration-count: 1,infinite;
  -webkit-animation-direction: normal,alternate;
  animation-direction: normal,alternate;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

.c9.c9.c9.c9.c9 {
  display: grid;
  grid-template-columns: repeat(5,minmax(100px,1fr));
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border-bottom-width: 1px;
  border-bottom-color: hsla(206,10%,29%,0.12);
  border-bottom-style: solid;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12.c12.c12.c12.c12 {
  display: grid;
  grid-template-columns: repeat(5,minmax(100px,1fr));
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  border-bottom-width: 1px;
  border-bottom-color: hsla(206,10%,29%,0.12);
  border-bottom-style: solid;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media screen and (min-width:320px) {
  .c1.c1.c1.c1.c1 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c1.c1.c1.c1.c1 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c1.c1.c1.c1.c1 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c1.c1.c1.c1.c1 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c1.c1.c1.c1.c1 {
    border-bottom-style: solid;
  }
}

<div>
  <div
    class="c0"
    data-blade-component="box"
    data-testid="list-view-skeleton"
  >
    <div
      class="c1"
      data-blade-component="box"
      data-testid="list-view-skeleton-filters"
    >
      <div
        class="c2"
        data-blade-component="box"
      >
        <div
          aria-hidden="true"
          class="c3 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c5 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c6 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c7 c4"
          data-blade-component="skeleton"
        />
      </div>
      <div
        aria-hidden="true"
        class="c8 c4"
        data-blade-component="skeleton"
      />
    </div>
    <div
      class=" c9"
      data-blade-component="base-box"
      data-testid="list-view-skeleton-header"
    >
      <div
        aria-hidden="true"
        class="c10 c4"
        data-blade-component="skeleton"
      />
      <div
        aria-hidden="true"
        class="c11 c4"
        data-blade-component="skeleton"
      />
      <div
        aria-hidden="true"
        class="c11 c4"
        data-blade-component="skeleton"
      />
      <div
        aria-hidden="true"
        class="c11 c4"
        data-blade-component="skeleton"
      />
      <div
        aria-hidden="true"
        class="c11 c4"
        data-blade-component="skeleton"
      />
    </div>
    <div
      class=""
      data-blade-component="box"
      data-testid="list-view-skeleton-rows"
    >
      <div
        class=" c12"
        data-blade-component="base-box"
        data-testid="list-view-skeleton-row-0"
      >
        <div
          aria-hidden="true"
          class="c13 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c15 c4"
          data-blade-component="skeleton"
        />
      </div>
      <div
        class=" c12"
        data-blade-component="base-box"
        data-testid="list-view-skeleton-row-1"
      >
        <div
          aria-hidden="true"
          class="c13 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c15 c4"
          data-blade-component="skeleton"
        />
      </div>
      <div
        class=" c12"
        data-blade-component="base-box"
        data-testid="list-view-skeleton-row-2"
      >
        <div
          aria-hidden="true"
          class="c13 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c15 c4"
          data-blade-component="skeleton"
        />
      </div>
      <div
        class=" c12"
        data-blade-component="base-box"
        data-testid="list-view-skeleton-row-3"
      >
        <div
          aria-hidden="true"
          class="c13 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c15 c4"
          data-blade-component="skeleton"
        />
      </div>
      <div
        class=" c12"
        data-blade-component="base-box"
        data-testid="list-view-skeleton-row-4"
      >
        <div
          aria-hidden="true"
          class="c13 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c15 c4"
          data-blade-component="skeleton"
        />
      </div>
      <div
        class=" c12"
        data-blade-component="base-box"
        data-testid="list-view-skeleton-row-5"
      >
        <div
          aria-hidden="true"
          class="c13 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c15 c4"
          data-blade-component="skeleton"
        />
      </div>
      <div
        class=" c12"
        data-blade-component="base-box"
        data-testid="list-view-skeleton-row-6"
      >
        <div
          aria-hidden="true"
          class="c13 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c14 c4"
          data-blade-component="skeleton"
        />
        <div
          aria-hidden="true"
          class="c15 c4"
          data-blade-component="skeleton"
        />
      </div>
    </div>
    <div
      class="c16"
      data-blade-component="box"
      data-testid="list-view-skeleton-pagination"
    >
      <div
        aria-hidden="true"
        class="c17 c4"
        data-blade-component="skeleton"
      />
      <div
        aria-hidden="true"
        class="c18 c4"
        data-blade-component="skeleton"
      />
      <div
        aria-hidden="true"
        class="c17 c4"
        data-blade-component="skeleton"
      />
    </div>
  </div>
</div>
`;
